# aoba

./: .gitignore  .gn  BUILD.gn  DEPS  README.md
aoba/: BUILD.gn
aoba/analyzer/: BUILD.gn  analyzer_test_base.cc  analyzer_test_base.h  annotation.cc  annotation.h  annotation_compiler.cc  annotation_compiler.h  built_in_world.cc  built_in_world.h  class_tree_builder.cc  class_tree_builder.h  class_tree_builder_test.cc  context.cc  context.h  context_user.cc  context_user.h  controller.cc  controller.h  error_codes.h  factory.cc  factory.h  name_resolver.cc  name_resolver.h  name_resolver_test.cc  pass.cc  pass.h  print_as_tree.cc  print_as_tree.h  properties.cc  properties.h  properties_editor.cc  properties_editor.h  type.cc  type.h  type_annotation_transformer.cc  type_annotation_transformer.h  type_checker.cc  type_checker.h  type_factory.cc  type_factory.h  (+24 more)
aoba/analyzer/public/: BUILD.gn  analyzer.cc  analyzer.h  analyzer_export.h  analyzer_settings.cc  analyzer_settings.h  analyzer_settings_builder.cc  analyzer_settings_builder.h  error_codes.cc  error_codes.h
aoba/ast/: BUILD.gn  ast_export.h  bindings.cc  bindings.h  compilation_units.cc  compilation_units.h  declarations.cc  declarations.h  error_codes.cc  error_codes.h  expressions.cc  expressions.h  jsdoc_syntaxes.cc  jsdoc_syntaxes.h  jsdoc_tags.h  lexical_grammar.h  literals.cc  literals.h  node.cc  node.h  node_factory.cc  node_factory.h  node_forward.h  node_printer.cc  node_printer.h  node_test.cc  node_traversal.cc  node_traversal.h  regexp.cc  regexp.h  statements.cc  statements.h  syntax.cc  syntax.h  syntax_factory.cc  syntax_factory.h  syntax_forward.h  syntax_printer.cc  syntax_visitor.cc  syntax_visitor.h  (+4 more)
aoba/base/: BUILD.gn  base_export.h  block_range.h  castable.h  castable_test.cc  double_linked.h  double_linked_test.cc  error_sink.cc  error_sink.h  escaped_string_piece.cc  escaped_string_piece.h  float_type.h  hash_utils.h  hash_utils_test.cc  iterator_utils.h  iterator_utils_test.cc  line_number_cache.cc  line_number_cache.h  line_number_cache_test.cc  ordered_list.h  ordered_list_test.cc  source_code.cc  source_code.h  source_code_factory.cc  source_code_factory.h  source_code_line.cc  source_code_line.h  source_code_line_cache.cc  source_code_line_cache.h  source_code_line_test.cc  source_code_range.cc  source_code_range.h  source_code_range_test.cc  visitable.h
aoba/base/graphs/: flow_graph.h  graph.h  graph_editor.h  graph_sorter.h  graph_test.cc  graph_test_support.cc  graph_test_support.h
aoba/base/memory/: zone.cc  zone.h  zone_allocated.cc  zone_allocated.h  zone_allocator.h  zone_owner.cc  zone_owner.h  zone_unordered_map.h  zone_unordered_set.h  zone_user.cc  zone_user.h  zone_vector.h
aoba/checker/: BUILD.gn  checker_main.cc  externs_module.h  make_externs_cc.py
aoba/ir/: BUILD.gn  common_operators.cc  common_operators.h  composite_type_factory.cc  composite_type_factory.h  composite_types.cc  composite_types.h  ir_export.h  node.cc  node.h  node_factory.cc  node_factory.h  node_forward.h  node_inputs.cc  node_inputs.h  node_printer.cc  node_test.cc  operator.cc  operator.h  operator_factory.cc  operator_factory.h  operator_forward.h  operator_printer.cc  operator_test.cc  primitive_type_factory.cc  primitive_type_factory.h  primitive_types.cc  primitive_types.h  type.cc  type.h  type_factory.cc  type_factory.h  type_forward.h  type_printer.cc  type_test.cc
aoba/parser/: BUILD.gn  parser.cc  parser.h  parser_bindings.cc  parser_declarations.cc  parser_error_codes.h  parser_expressions.cc  parser_statements.cc  parser_test.cc
aoba/parser/jsdoc/: BUILD.gn  jsdoc_error_codes.h  jsdoc_parser.cc  jsdoc_parser.h  jsdoc_parser_test.cc
aoba/parser/lexer/: BUILD.gn  lexer.cc  lexer.h  lexer_error_codes.h  lexer_test.cc
aoba/parser/public/: BUILD.gn  parse.cc  parse.h  parser_context.cc  parser_context.h  parser_context_builder.cc  parser_context_builder.h  parser_export.h  parser_options.cc  parser_options.h  parser_options_builder.cc  parser_options_builder.h
aoba/parser/regexp/: BUILD.gn  regexp_error_codes.h  regexp_lexer.cc  regexp_lexer.h  regexp_lexer_test.cc  regexp_parser.cc  regexp_parser.h  regexp_parser_test.cc
aoba/parser/type/: BUILD.gn  type_error_codes.h  type_lexer.cc  type_lexer.h  type_lexer_test.cc  type_parser.cc  type_parser.h  type_parser_test.cc
aoba/testing/: BUILD.gn  lexer_test_base.cc  lexer_test_base.h  print_as_tree.cc  print_as_tree.h  simple_error_sink.cc  simple_error_sink.h  simple_formatter.cc  simple_formatter.h
aoba/tools/: build.cmd
(+7 files in other folders)
