# Copyright (c) 2016 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("parser_implementation") {
  defines = [ "AOBA_PARSER_IMPLEMENTATION" ]
}

source_set("parser") {
  sources = [
    "parser.cc",
    "parser.h",
    "parser_bindings.cc",
    "parser_declarations.cc",
    "parser_expressions.cc",
    "parser_statements.cc",
  ]
  public_deps = [
    "//aoba/ast",
    "//aoba/base",
    "//aoba/parser/lexer",
    "//aoba/parser/public:headers",
    "//aoba/parser/regexp",
    "//aoba/parser/utils",
  ]

  configs += [ ":parser_implementation" ]
}

source_set("test_files") {
  testonly = true
  sources = [
    "parser_test.cc",
  ]
  deps = [
    ":parser",
    "//aoba/parser/jsdoc:test_files",
    "//aoba/parser/lexer:test_files",
    "//aoba/parser/public",
    "//aoba/parser/regexp:test_files",
    "//aoba/parser/type:test_files",
    "//aoba/testing",
    "//testing/gtest",
  ]
}
