# Copyright (c) 2016 Project Vogue. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

component("public") {
  output_name = "aoba_analyzer"
  sources = [
    "analyzer.cc",
    "analyzer.h",
    "analyzer_export.h",
    "analyzer_settings.cc",
    "analyzer_settings.h",
    "analyzer_settings_builder.cc",
    "analyzer_settings_builder.h",
    "error_codes.cc",
    "error_codes.h",
  ]

  public_deps = [
    ":headers",
    "//aoba/analyzer",
  ]

  configs += [ "//aoba/analyzer/:analyzer_implementation" ]
}


source_set("headers") {
  sources = [
    "analyzer.h",
    "analyzer_export.h",
    "analyzer_settings.h",
    "analyzer_settings_builder.h",
    "error_codes.h",
  ]

  public_deps = [
    "//base",
  ]
}
